# claudecage

./: CLAUDE.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml
docs/: security.md
lore/: 2026-03-28-conception.md  2026-03-29-gh-token-injection.md  2026-03-30-github-pat-check-status.md  2026-04-05-claude-json-state-isolation.md  2026-04-05-mount-approval-prompt-explanation.md  2026-04-05-mount-approval.md  2026-04-05-separate-agent-homes-and-intent-mounts.md  TODO.md
src/: auth.rs  docker.rs  dockerfile.txt  main.rs  mount_approval.rs  mounts.rs
tests/: docker.rs  integration.rs
tests/common/: mod.rs
